--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "ionicons": "^7.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
